--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,11 @@
 {
   "menu.home": "Home",
   "menu.find": "Find",
+  "menu.show": "Show",
+  "menu.movie": "Movie",
+  "menu.tv": "Tv",
   "menu.scripts": "Scripts",
+  "menu.script": "Script",
   "menu.posts": "Posts",
   "menu.users": "Users",
   "menu.account": "Account",
@@ -77,9 +81,10 @@
   "episode.scripts": "scripts",
 
   "action.registerScript": "Register Script",
-  "action.applyTutor": "Apply to Become a Tutor",
+  "action.applyTutor": "Become a Tutor",
   "action.pending": "Pending Approval",
   "action.login": "Login",
+  "notice.ready": "Let's register now.",
   "notice.episodeRequired": "To register a script, please select a season.",
   "notice.tutorRequired": "To register a script, you must apply as a tutor.",
   "notice.loginRequired": "To register a script, you must be logged in.",
@@ -89,7 +94,7 @@
   "homepage.visit": "Visit Homepage",
 
   "signup.header": "Sign up",
-  "signup.success": "Account successfully created!",
+  "signup.success": "Account successfully created! please verify your email.",
   "signup.yourName": "Your Name",
   "signup.email": "Email address",
   "signup.password": "Password (min 8 characters)",
@@ -117,13 +122,24 @@
   "tutor.description1": "Ready to take the next step in your journey?",
   "tutor.description2": "As a tutor, you can:",
   "tutor.list.create": "Create and share your own script",
-  "tutor.list.help": "Help other students with your contents",
+  "tutor.list.help": "Help other students with your contents(later)",
   "tutor.list.earn": "Earn recognition for your expertise",
   "tutor.list.notice": "It may take up to one day for approval after uploading your script",
   "tutor.sendApplication": "Send tutor application",
   "tutor.sendApplicationRequested": "Requested",
   "tutor.sendApplicationConfirmed": "Confirmed",
   "tutor.uploadScriptMessage": "Now go upload your own script ->",
+
+  "toast.incorrectCredentials": "Provided email or password are incorrect",
+  "toast.scriptUploaded": "Script successfully uploaded.(After confirmation, everyone can see)",
+  "toast.success.deleted": "Successfully deleted.",
+  "toast.success.updated": "Successfully updated.",
+  "toast.success.created": "Successfully created.",
+  "toast.success.confirmed": "Successfully checked out.",
+  "toast.success.login": "Log in success!",
+
+  "toast.error.processing": "There was an error while processing.",
+  "toast.error.auth": "Should be logged in",
 
   "button.submit": "Submit",
   "button.modify": "Modify",
@@ -154,13 +170,11 @@
   "post.type.general": "general",
   "post.type.notice": "notice",
   "post.type.vote": "vote",
+  "post.type.q&a": "q&a",
+  "post.type.error": "error",
+  "post.type.request": "request",
 
-  "empty.noPosts": "no posts",
-  "empty.noPost": "no post",
-  "empty.noShow": "no show",
-  "empty.noScripts": "no scripts",
-  "empty.noScript": "no script",
-  "empty.noData": "No data to show at the moment",
+  "emptyMessage": "No {resource} to show at the moment",
 
   "filter.lines": "LINES",
   "filter.words": "WORDS",
@@ -171,6 +185,11 @@
   "modal.menu.delete": "Delete",
   "modal.menu.register": "Register",
   "modal.menu.update": "Update",
+
+  "modal.delete.title": "Delete {resource}",
+  "modal.delete.description": "Are you sure you want to delete this {resource} permanently? This action cannot be undone.",
+  "modal.delete.cancel": "Cancel",
+  "modal.delete.delete": "Delete",
 
   "form.emailAddress": "Email address",
   "form.fullName": "Nick name",
