--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -1,7 +1,11 @@
 {
   "menu.home": "홈",
   "menu.find": "검색",
+  "menu.show": "Show",
+  "menu.movie": "영화",
+  "menu.tv": "Tv",
   "menu.scripts": "스크립트",
+  "menu.script": "스크립트",
   "menu.posts": "게시물",
   "menu.users": "사용자",
   "menu.account": "계정",
@@ -69,6 +73,7 @@
   "action.applyTutor": "튜터 지원하기",
   "action.pending": "승인중",
   "action.login": "로그인",
+  "notice.ready": "스크립트를 등록해보세요.",
   "notice.episodeRequired": "스크립트를 등록하려면 시즌을 선택하세요.",
   "notice.tutorRequired": "스크립트를 등록하려면 튜터로 신청해야 합니다.",
   "notice.loginRequired": "스크립트를 등록하려면 로그인해야 합니다.",
@@ -76,7 +81,7 @@
   "season.episodes": "{count}개의 에피소드",
   "homepage.visit": "홈페이지 방문",
   "signup.header": "회원가입",
-  "signup.success": "회원가입에 성공했습니다.",
+  "signup.success": "회원가입에 성공했습니다.(이메일 확인 필요)",
   "signup.yourName": "별명",
   "signup.email": "이메일 주소",
   "signup.password": "비밀번호 (최소 8자)",
@@ -101,7 +106,7 @@
   "tutor.description1": "다음 단계로 나아갈 준비가 되셨나요?",
   "tutor.description2": "튜터가 되면 다음을 할 수 있습니다:",
   "tutor.list.create": "자신만의 스크립트를 만들고 공유하기",
-  "tutor.list.help": "다른 학생들을 도와주기",
+  "tutor.list.help": "다른 학생들을 도와주기(예정)",
   "tutor.list.earn": "전문성 인정받기",
   "tutor.list.notice": "스크립트 업로드 후 최대 1일 승인시간이 걸릴 수 있습니다.",
   "tutor.sendApplication": "튜터 신청하기",
@@ -134,17 +139,36 @@
   "post.category.request": "요청",
   "post.type.general": "일반",
   "post.type.notice": "공지",
-  "post.type.vote": "투표",
+  "post.type.q&a": "질문",
+  "post.type.error": "오류",
+  "post.type.request": "요청",
   "empty.noPosts": "게시물이 없습니다.",
   "empty.noPost": "게시물이 없습니다.",
   "empty.noShow": "쇼가 없습니다.",
   "empty.noScripts": "스크립트가 없습니다.",
   "empty.noScript": "스크립트가 없습니다.",
   "empty.noData": "데이터가 없습니다.",
+
+  "emptyMessage": "현재 데이터가 없습니다.",
+
+  "toast.incorrectCredentials": "이메일 혹은 비밀번호가 일치하지 않습니다.",
+  "toast.scriptUploaded": "스크립트가 성공적으로 등록되었습니다.(승인 후 열람 가능합니다)",
+  "toast.success.deleted": "성공적으로 삭제되었습니다.",
+  "toast.success.updated": "성공적으로 수정되었습니다.",
+  "toast.success.created": "성공적으로 생성되었습니다.",
+  "toast.success.confirmed": "성공적으로 변경되었습니다.",
+  "toast.error.processing": "요청을 실패했습니다.",
+  "toast.error.auth": "로그인이 필요합니다.",
+  "toast.success.login": "로그인 성공!",
   "modal.menu.edit": "편집",
   "modal.menu.delete": "삭제",
   "modal.menu.register": "등록",
   "modal.menu.update": "수정",
+  "modal.delete.title": "{resource} 삭제",
+  "modal.delete.description": "정말 삭제 하시겠습니까?",
+  "modal.delete.cancel": "취소",
+  "modal.delete.delete": "삭제",
+
   "form.emailAddress": "이메일 주소",
   "form.fullName": "별명",
   "form.avatarImage": "아바타 이미지",
