--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -96,6 +96,8 @@
   "login.loginButton": "로그인",
   "login.password": "비밀번호",
   "script.add": "추가",
+  "script.see": "보러가기",
+
   "scriptAdd.addHeader": "스크립트 추가",
   "scriptAdd.editHeader": "스크립트 편집",
   "scriptAdd.season": "시즌",
