--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -122,7 +122,7 @@
   "button.updateAccount": "수정",
   "filter.lines": "대사",
   "filter.words": "단어",
-  "filter.phrase": "구문",
+  "filter.phrases": "구문",
   "filter.idioms": "관용구",
   "season.seasons": "시즌",
   "episode.register": "등록",
