--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,6 +14,7 @@
   "menu.logout": "Log Out",
   "menu.login": "Log In",
   "menu.back": "Back",
+  "menu.convert": "Convert",
 
   "option.movie": "Movie",
   "option.tv": "Tv",
