--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -14,6 +14,7 @@
   "menu.logout": "로그아웃",
   "menu.login": "로그인",
   "menu.back": "뒤로",
+  "menu.convert": "변환",
 
   "option.movie": "영화",
   "option.tv": "TV",
